src/GlobalStyles/index.scss
@import "../Sass/mixins";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

::selection {
  background-color: var(--dark-gray-opacity5);
  color: var(--white);
}

a::selection {
  background-color: rgba(69, 69, 69, .5);
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--extra-dark-blue);
  color: var(--white);
  font-family: 'Roboto', sans-serif;
  padding-left: 292px;
  transition: padding .5s ease-in-out;
}

@include large {
  body {
    padding-left: 0;
  }
}

body.focusMode {
  overflow: hidden;
}

body.sidebarExtend {
  padding: 0;
}

li {
  list-style: none;
}

img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

button {
  outline: none;
  border: none;
}

p {
  font-size: 1.2rem;
  line-height: 1.4;
}

main {
  min-height: 100vh;
}

@include medium {
  p {
    font-size: 1rem;
  }
}

.container {
  width: 90%;
  margin: 0 auto;
}

@include medium {
  .container {
    width: 92%;
  }
}

.linkStyle1 {
  display: inline-block;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  transition: color .3s;
  padding: 0;
  margin: 0 4px;
  color: var(--cyan-blue);
  outline: none;

  &:first-child {
    margin-left: 0;
  }

  &.noMarginRight {
    margin-right: 0;
  }

  &:focus-visible {
    outline: solid 2px var(--cyan-blue);
  }
}

.linkStyle1::before {
  content: '';
  position: absolute;
  left: -1px;
  bottom: -2px;
  width: calc(100% + 2px);
  height: 2px;
  background-color: var(--cyan-blue);
  transition: height .3s, opacity .2s .2s;
}

.linkStyle1:hover::before {
  height: calc(100% + 2px);
  opacity: .3;
  transition: height .2s, opacity .2s;
}

.skip-content {
  background-color: var(--extra-dark-blue);
  color: var(--white);
  text-decoration: none;
  border-radius: 6px;
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
  top: -70px;
  z-index: 10000;
  padding: 10px;
  margin: 2px;
  transition: top .2s;

  &:focus {
    left: 50%;
    top: 10px;
  }
}

.linenumber {
  color: #7f8799 !important;
  min-width: 20px !important;
  padding-right: 30px !important;
}

@include medium {
  .linenumber {
    min-width: 40px !important;
  }
}

